<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/email_field"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:layout_weight="0.22"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="26dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/confirm_pwd_field"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:layout_weight="0.04"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName"
            android:password="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="154dp"
            android:layout_below="@+id/pwd_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/pwd_field"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:layout_weight="0.04"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:password="true"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="90dp"
            android:layout_below="@+id/email_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_below="@+id/confirm_pwd_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/button_registrationemail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="229dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>