<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mkarma.testappsg.MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/email_field"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/pwd_field"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/pwd_field" />

        <EditText
            android:id="@+id/pwd_field"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:password="true"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field"
            android:layout_below="@+id/email_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/pwd_field"
            android:layout_below="@+id/pwd_field"
            android:layout_marginTop="30dp"
            android:text="@string/buttonLogin"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegistration"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwd_field" />

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/buttonLogin"
            android:layout_below="@+id/buttonLogin"
            android:layout_marginTop="30dp"
            android:text="@string/registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
